# cpp_proys

./: README.md
GameOfLife_mod/: CMakeLists.txt  README.txt  config.txt  open_all.sh  rebuild.sh
GameOfLife_mod/Source/: Application.cpp  Application.hpp  CellularAutonom.cpp  CellularAutonom.hpp  Keyboard.cpp  Keyboard.hpp  Main.cpp
GameOfLife_mod/Source/Game/: GameOfLife.cpp  GameOfLife.hpp
GameOfLife_mod/Source/ResourceManager/: ResourceHolder.cpp  ResourceHolder.hpp  ResourceManager.hpp
GameOfLife_mod/Source/Utils/: Config.hpp  FPSCounter.cpp  FPSCounter.hpp
